<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/serverHostEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server_host"
        android:minWidth="200dp"
        android:minHeight="48dp"
        android:inputType="textUri"/>

    <EditText
        android:id="@+id/serverPortEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server_port"
        android:minWidth="200dp"
        android:minHeight="48dp"
        android:inputType="number"/>

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:minWidth="200dp"
        android:minHeight="48dp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:minWidth="200dp"
        android:minHeight="48dp"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:minWidth="200dp"
        android:minHeight="48dp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:minWidth="200dp"
        android:minHeight="48dp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:minWidth="200dp"
        android:minHeight="48dp"
        android:inputType="text"/>



    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/maleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/femaleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />

    </RadioGroup>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register" />


</LinearLayout>